[package]
edition = "2021"
name = "proc-macros"
version = "0.1.0"

[lib]
proc-macro = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
Inflector = {version = "*", default-features = false}
proc-macro2 = {version = "1", default-features = false}
quote = "1"
syn = {version = "1", features = ["full"]}
